# licensly-sdk-python

./: .gitignore  CHANGELOG.md  README.md  contract.lock.json  pyproject.toml
.github/workflows/: ci.yml
scripts/: fetch-contract.sh
src/licensly/: __init__.py  client.py  exceptions.py  models.py  py.typed  session.py  signing.py
tests/: conftest.py  test_client.py  test_signing.py
tests/fixtures/: ed25519_bad_signature.json  ed25519_mutated_payload.json  ed25519_valid.json
