[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "licensly"
version = "0.1.0"
description = "Licensly Client API SDK for Python"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Licensly" }]
dependencies = [
  "httpx>=0.27",
  "cryptography>=42",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["src/licensly"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
